<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gift Of Blood </string>
    <string name="menu_settings">Settings</string>
    <string name="titleDonatorInfo">Informacije o doniranju</string>
    <string name="textINeedBlood">Treba mi krv!</string>
    <string name="titleTelephoneNumber">Broj telefona:</string>
    <string name="titleEMail">E-mail:</string>
    <string name="hintTelephoneNumber">062123321</string>
    <string name="titleBloodType">Krvna grupa:</string>
    <string name="titleCountry">Drzava:</string>
    <string name="titleCity">Grad:</string>
    <string name="titleRegister">Registruj me kao donatora</string>
    <string name="hintEMail">example@email.com</string>
    <string name="textOptOut">Ne obavjestavaj me o potrebi</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ineed_blood">I Need Blood</string>
    <string name="titleHospitalTelephoneNumber">Broj telefona bolnice:</string>
    <string name="titleNeedHelp">Zatrazi pomoc</string>
    <string name="titleName">Ime:</string>
    <string name="titleSurname">Prezime:</string>
    <string name="hintName">Mujo</string>
    <string name="hintSurname">Mujic</string>
    <string name="titleConfirm">Jeste li sigurni?</string>
    <string name="buttonPositive">Da</string>
    <string name="buttonNegative">Ne</string>
    <string name="titleConfirmOptOut">Da li ste sigurni da ne zelite vise primati obavjesti o potrebi za krvi Vase krvne grupe?</string>

</resources>