<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#888"
    tools:context=".INeedBlood" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:background="#fff"
        android:scrollbars="vertical" >

        <ImageView
            android:id="@+id/titleDonorInfo"
            android:layout_width="200dp"
            android:layout_height="104dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:contentDescription="logo"
            android:src="@drawable/giftofbloodlogo"
            tools:ignore="HardcodedText" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/titleName"
                        android:layout_width="86dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="0.01"
                        android:gravity="center_vertical"
                        android:lines="2"
                        android:text="@string/titleName" />

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="0.91"
                        android:ems="10"
                        android:hint="@string/hintName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/titleSurname"
                        android:layout_width="86dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="0.01"
                        android:gravity="center_vertical"
                        android:lines="2"
                        android:text="@string/titleSurname" />

                    <EditText
                        android:id="@+id/editTextSurname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="0.91"
                        android:ems="10"
                        android:hint="@string/hintSurname" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="86dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="0.01"
                        android:gravity="center_vertical"
                        android:lines="2"
                        android:text="@string/titleHospitalTelephoneNumber" />

                    <EditText
                        android:id="@+id/editTextPhoneNumber"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="0.91"
                        android:ems="10"
                        android:hint="@string/hintTelephoneNumber"
                        android:inputType="phone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/labelTelephoneNumber"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/titleTelephoneNumber" />

                    <EditText
                        android:id="@+id/editTextTelephoneNumber"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hintTelephoneNumber"
                        android:inputType="phone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/labelEMail"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/titleEMail" />

                    <EditText
                        android:id="@+id/editTextEMail"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hintEMail"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/labelBloodType"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/titleBloodType" />

                    <Spinner
                        android:id="@+id/listBloodType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/labelCountry"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        android:text="@string/titleCountry" />

                    <Spinner
                        android:id="@+id/listCountry"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textCity"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/titleCity" />

                    <Spinner
                        android:id="@+id/listCity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <Button
        android:id="@+id/buttonAskHelp"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/roundedbtn"
        android:padding="20dp"
        android:text="@string/titleNeedHelp"
        android:textColor="#ffff33" />

</RelativeLayout>