<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#888"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="#fff"
        android:scrollbars="vertical" >

        <ImageView
            android:id="@+id/titleDonorInfo"
            android:layout_width="200dp"
            android:layout_height="104dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:contentDescription="logo"
            android:src="@drawable/giftofbloodlogo"
            tools:ignore="HardcodedText" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/labelTelephoneNumber"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/titleTelephoneNumber" />

                    <EditText
                        android:id="@+id/editTextTelephoneNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hintTelephoneNumber"
                        android:inputType="phone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/labelEMail"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/titleEMail" />

                    <EditText
                        android:id="@+id/editTextEMail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hintEMail"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/labelBloodType"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/titleBloodType" />

                    <Spinner
                        android:id="@+id/listBloodType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/labelCountry"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        android:text="@string/titleCountry" />

                    <Spinner
                        android:id="@+id/listCountry"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textCity"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/titleCity" />

                    <Spinner
                        android:id="@+id/listCity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/buttonRegister"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="#9F2200"
                        android:height="40dp"
                        android:text="@string/titleRegister"
                        android:textColor="#fff"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/buttonOptOut"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:background="#9F2200"
                        android:height="40dp"
                        android:text="@string/textOptOut"
                        android:textColor="#fff"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <Button
        android:id="@+id/buttonINeedBlood"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/roundedbtn"
        android:padding="20dp"
        android:text="@string/textINeedBlood"
        android:textColor="#ffff33" />

</RelativeLayout>